--- a/src/assets/quill-better-table.scss
+++ b/src/assets/quill-better-table.scss
@@ -157,3 +157,107 @@ table.quill-better-table {
     }
   }
 }
+
+.qlbt-move-tool, .qlbt-style-tool {
+  position: absolute;
+  display: flex;
+  z-index: 99;
+  height: 16px;
+  opacity: .35;
+  transition: .2s;
+  cursor: pointer;
+}
+
+.qlbt-style-tool .icon {
+  position: relative;
+}
+
+.qlbt-move-tool:hover,
+.qlbt-move-tool:focus-within,
+.qlbt-style-tool:focus-within,
+.qlbt-style-tool:hover {
+  opacity: .8;
+  transition: .2s;
+}
+
+.qlbt-style-tool {
+  display: grid;
+
+}
+
+.qlbt-style-colors-picker-options {
+  background-color: #fff;
+  position: absolute;
+  top: 1px;
+  right: 40px;
+  padding: 3px 5px;
+  width: 152px;
+}
+
+.qlbt-style-picker-options {
+  background-color: #fff;
+  display: grid;
+  grid-template-rows: repeat(auto-fit, 1fr);
+  grid-gap: 5px;
+  position: absolute;
+  top: 1px;
+  right: 40px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  color: var(--black);
+  box-shadow: 0 0 6px #00000035;
+  border-radius: .3em;
+}
+
+.qlbt-style-colors-item {
+  border: 1px dotted grey;
+  float: left;
+  height: 16px;
+  margin: 2px;
+  width: 16px;
+  z-index: 50;
+  transition: .2s;
+}
+
+.qlbt-style-item {
+  z-index: 50;
+  padding: 5px;
+  transition: .2s;
+}
+
+.qlbt-style-item:hover, .qlbt-style-colors-item:hover, .selected-item {
+  opacity: 1;
+  transition: .2s;
+}
+
+.qlbt-style-colors-item:hover, .selected-item {
+  border-color: var(--dark-gray);
+  transition: .2s;
+}
+
+.qlbt-style-item:hover, .selected-item {
+  background-color: var(--light-primary);
+  transition: .2s;
+}
+
+#solid {
+  width: 50px;
+  margin: 4px;
+  display: inline-block;
+  border-top: 2px solid rgb(0, 0, 0);
+}
+
+#dotted {
+  width: 50px;
+  margin-bottom: 4px;
+  display: inline-block;
+  border-top: 2px dotted rgb(0, 0, 0);
+}
+
+#dashed {
+  width: 50px;
+  margin-bottom: 4px;
+  display: inline-block;
+  border-top: 2px dashed rgb(0, 0, 0);
+}
